# IMU-Simulator

./: .gitignore  README.md  fractalcoef.py  imusim.py  pyproject.toml  quaternion.py  setup.py
.github/workflows/: main.yml
Examples/: 3d_animation.py  3d_plot.py  allan_variance.py  compare_real_imu.py  double_integration.py  plot_kinematics_and_imu.py  sensor_models.py
Examples/indoor_forward_10_davis_with_gt/: README.md  groundtruth.txt
Examples/stationary/: stationary.csv
