[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "imusim"
version = "1.1.2"
description = "IMU Simulator"
readme = {text = "See [github](https://github.com/xioTechnologies/IMU-Simulator) for documentation and examples.", content-type = "text/markdown" }
authors = [{name = "x-io Technologies Limited", email = "info@x-io.co.uk"}]
license = {file = "LICENSE.md"}

[project.urls]
Repository = "https://github.com/xioTechnologies/IMU-Simulator"

[tool.setuptools]
py-modules = ["fractalcoef", "imusim", "quaternion"]
